@@ -327,7 +327,6 @@
            (SYSTEM::*PRIN-STREAM*       NIL) ; CLISP specific
            (SYSTEM::*PRIN-LINELENGTH*   79)  ; CLISP specific
            (SYSTEM::*PRIN-LINE-PREFIX*  NIL) ; CLISP specific
-           (CUSTOM::*PRINT-SYMBOLS-LONG* NIL) ; CLISP specific
            (COMPILER::*LOAD-FORMS*      NIL) ; CLISP specific
            ;; reader variables:
            (*READ-BASE*                 10)
