@@ -1,3 +1,11 @@
+2004-03-23  Bruno Haible  <bruno@clisp.org>
+
+	Drop *print-symbols-long*.
+	* spvw.d (init_symbol_values): Don't initialize *print-symbols-long*.
+	* io.d (pr_symbol): Look at *print-readably*, not *print-symbols-long*.
+	* defs2.lisp (with-standard-io-syntax): Don't bind *print-symbols-long*.
+	* compiler.lisp (c-write-lib, compile-toplevel-form): Likewise.
+
 2004-03-23  Sam Steingold  <sds@gnu.org>
 
 	* clhs.lisp (read-from-file): accept :REPEAT keyword argument
